--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,12 @@ services:
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
-    command: start-dev
+    volumes:
+      - ./realm-config:/opt/keycloak/data/import
+    command:
+      - start-dev
+      - --import-realm
+    restart: unless-stopped
 
   nginx:
     image: nginx:latest
