--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
 services:
+  postgres:
+    image: postgres:17
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: "pg_isready -U keycloak -d keycloak"
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   keycloak:
-    image: quay.io/keycloak/keycloak:latest
+    image: bettergr-keycloak:1.0
+    depends_on:
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
     volumes:
-      - ./realm-config:/opt/keycloak/data/import
+      - ./realm-export.json:/opt/keycloak/data/import/realm.json
     command:
       - start-dev
       - --import-realm
@@ -21,3 +40,6 @@ services:
       - ./ngnix/ngnix.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - keycloak
+
+volumes:
+  postgres_data:
